2009-02-06  Alexander Kurtakov  <akurtako@redhat.com>
	* src/org/eclipse/linuxtools/rpm/ui/editor/RpmMacroProposalsList.java (getMacroEval): Use utils for command invocation.
	* src/org/eclipse/linuxtools/rpm/ui/editor/RpmPackageBuildProposalsJob.java (retrievePackageList): Likewise.
	* src/org/eclipse/linuxtools/rpm/ui/editor/RpmPackageProposalsList.java (getRpmInfo): Likewise
	* src/org/eclipse/linuxtools/rpm/ui/editor/Utils.java (runCommandToInputStream): Make it vararg.
	(runCommandToString): Likewise.
	(pluginSanityCheck): Execute directly.
	* src/org/eclipse/linuxtools/rpm/ui/editor/wizards/SpecfileNewWizardPage.java (runRpmdevNewSpec): Use utils for command invocation.